--- a/src/components/Board/Board.module.css
+++ b/src/components/Board/Board.module.css
@@ -1,6 +1,18 @@
 .board {
+  width: 296px;
+  height: 296px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: aliceblue;
+  overflow: hidden;
+}
+
+.boardWrapper {
   width: 300px;
   height: 300px;
+  margin: -2px;
+  background-color: #a507a5;
   display: flex;
   justify-content: center;
   align-items: center;
