--- a/src/components/Square/Square.module.css
+++ b/src/components/Square/Square.module.css
@@ -1,13 +1,29 @@
 .square {
-  width: 100px;
-  height: 100px;
-  border: 1px solid #a507a5;
+  width: calc((100% - 12px) / 3);
+  height: calc((100% - 12px) / 3);
+  margin: 2px;
+  /* border: 1px solid #a507a5; */
+  border: none;
   background-color: #261c2a;
   cursor: pointer;
-  color: #d3cbb7;
+  color: #b9b5aa;
   font-size: 100px;
-  font-weight: 100;
+  /* font-weight: 100; */
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all 300ms ease-in;
+}
+
+/* .square:not(:nth-child(3n)) {
+  margin-right: 1px;
+}
+
+.square:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 1px;
+} */
+
+.square:hover {
+  background-color: #3f2f46;
+  transition: all 300ms ease-in;
 }
