--- a/src/components/Board/Board.module.css
+++ b/src/components/Board/Board.module.css
@@ -1,9 +1,6 @@
 .board {
-  width: 296px;
-  height: 296px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   background-color: aliceblue;
   overflow: hidden;
 }
